<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="com.infmme.readilyapp.MainActivity">

    <item
            android:id="@+id/action_file"
            android:enabled="true"
            android:icon="@drawable/ic_storage_white_24dp"
            app:showAsAction="ifRoom"
            android:title="@string/preferences_pick_file"
            android:visible="true"/>

    <item
            android:id="@+id/action_clipboard"
            android:enabled="true"
            android:icon="@drawable/ic_content_paste_white_24dp"
            app:showAsAction="ifRoom"
            android:title="@string/preferences_clipboard"
            android:visible="true"/>


    <item
            android:id="@+id/action_instructions"
            android:enabled="true"
            android:icon="@drawable/ic_help_outline_white_24dp"
            app:showAsAction="ifRoom"
            android:title="@string/preferences_instrucions"
            android:visible="true"/>

    <item
            android:id="@+id/action_settings"
            android:enabled="true"
            android:icon="@drawable/ic_settings_white_24dp"
            app:showAsAction="ifRoom"
            android:title="@string/title_activity_settings"
            android:visible="true"/>

</menu>