<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cache_list_card"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="4dp">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent">
            <android.support.percent.PercentRelativeLayout
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/cache_list_card_child">

                <ImageView app:layout_widthPercent="100%"
                           app:layout_aspectRatio="178%"
                           android:id="@+id/cache_list_card_image"
                           android:scaleType="centerCrop"
                           android:cropToPadding="true"
                           android:layout_alignParentStart="true"
                           android:layout_alignParentLeft="true"
                           android:layout_alignParentTop="true"
                           card_view:srcCompat="@color/design_snackbar_background_color"/>
                <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:id="@+id/cache_list_card_progress"
                        android:background="@android:color/transparent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/cache_list_card_image"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cache_list_card_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:text="@string/title"
                        android:maxLines="3"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:layout_below="@+id/cache_list_card_progress"
                        android:textColor="?android:attr/textColorPrimary"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cache_list_card_part"
                        android:text="@string/sample_part"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/cache_list_card_title"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cache_list_card_time_opened"
                        android:text="@string/sample_time"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/cache_list_card_part"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"/>
            </android.support.percent.PercentRelativeLayout>

            <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cache_list_card_child"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/cache_list_card_button_more"
                    android:text="@string/book_card_more"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"/>

            <Button
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/cache_list_card_button_more"
                    android:layout_toLeftOf="@+id/cache_list_card_button_more"
                    android:layout_below="@id/cache_list_card_child"
                    android:layout_alignBaseline="@id/cache_list_card_button_more"
                    android:id="@+id/cache_list_card_button_toc"
                    android:text="@string/book_card_navigate"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>